--- a/trunk/tasma/tasma/po/de.po
+++ b/trunk/tasma/tasma/po/de.po
@@ -1,15 +1,19 @@
+# translation of yeni.po to Deutsch
+# This file is put in the public domain.
 #
+# Mustafa M. Ölcerman <oelcerman@fussballkreis.org>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: tasma\n"
+"Project-Id-Version: yeni\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-26 21:00+0200\n"
-"PO-Revision-Date: 2006-11-03 00:01+0100\n"
-"Last-Translator: Mustafa <test>\n"
-"Language-Team: german <german@li.org>\n"
+"PO-Revision-Date: 2006-12-05 22:49+0200\n"
+"Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: src/tmoduleview.cpp:84
 msgid "&Administrator Mode"
@@ -30,17 +34,17 @@ msgstr "(c) 2005, TUBITAK - UEKAE"
 #: modules/tasmatv/tasmatv.cpp:42
 #, fuzzy
 msgid "(c) 2005-2006, TUBITAK - UEKAE"
-msgstr "(c) 2005, TUBITAK - UEKAE"
+msgstr "(c) 2005-2006, TUBITAK - UEKAE"
 
 #: modules/tasmatv/tvconfigui.cpp:155 rc.cpp:48
 #, no-c-format
 msgid "28 Mhz Crystal"
-msgstr ""
+msgstr "28 Mhz Crystal"
 
 #: modules/tasmatv/tvconfigui.cpp:156 rc.cpp:51
 #, no-c-format
 msgid "35 Mhz Crystal"
-msgstr ""
+msgstr "35 Mhz Crystal"
 
 #: src/tmoduleview.cpp:148
 msgid "<big>Loading...</big>"
@@ -53,7 +57,7 @@ msgstr "Über das aktuelle Module"
 #: modules/tasmatv/tvconfigui.cpp:151 rc.cpp:36
 #, no-c-format
 msgid "Addons"
-msgstr ""
+msgstr "Erweiterungen"
 
 #: src/aboutview.cpp:68
 msgid "Configuration Center"
@@ -65,12 +69,12 @@ msgstr "Aktueller Verwalter des Programms"
 
 #: src/kfile-plugins/pisi/kfile_pisi.cpp:40
 msgid "Description"
-msgstr ""
+msgstr "Beschreibung"
 
 #: modules/tasmatv/tvconfigui.cpp:154 rc.cpp:45
 #, no-c-format
 msgid "Do not use PLL"
-msgstr ""
+msgstr "PLL nicht verwenden"
 
 #: src/aboutview.cpp:99
 msgid ""
@@ -94,13 +98,13 @@ msgstr "Die KDE Entwickler"
 #: rc.cpp:9 rc.cpp:24
 #, no-c-format
 msgid "Manufacturer"
-msgstr ""
+msgstr "Hersteller"
 
 #: modules/tasmatv/tvconfigui.cpp:137 modules/tasmatv/tvconfigui.cpp:147
 #: rc.cpp:6 rc.cpp:27
 #, no-c-format
 msgid "Model"
-msgstr ""
+msgstr "Model"
 
 #: src/main.cpp:67
 msgid "Module Developers"
@@ -108,14 +112,14 @@ msgstr "Die Moduleentwickler"
 
 #: src/kfile-plugins/pisi/kfile_pisi.cpp:38
 msgid "Name"
-msgstr ""
+msgstr "Name"
 
 #: modules/tasmatv/tvconfigui.cpp:140 modules/tasmatv/tvconfigui.cpp:142
 #: modules/tasmatv/tvconfigui.cpp:145 modules/tasmatv/tvconfigui.cpp:149
 #: rc.cpp:12 rc.cpp:15 rc.cpp:21 rc.cpp:30
 #, no-c-format
 msgid "New Item"
-msgstr ""
+msgstr "Neues Element"
 
 #: src/main.cpp:66
 msgid "Old Maintainer & Original Author"
@@ -123,7 +127,7 @@ msgstr "Vorheriger Verwalter & ursprünglicher Autor"
 
 #: modules/tasmatv/cards-db.cpp:99 modules/tasmatv/tuners-db.cpp:173
 msgid "Other"
-msgstr ""
+msgstr "Andere"
 
 #: src/main.cpp:63
 msgid "Pardus Configuration Center"
@@ -136,16 +140,16 @@ msgstr ""
 
 #: src/kfile-plugins/pisi/kfile_pisi.cpp:34
 msgid "PiSi Package Info"
-msgstr ""
+msgstr "PiSi Paket-Info"
 
 #: modules/tasmatv/tvconfigui.cpp:152 rc.cpp:39
 #, no-c-format
 msgid "Radio Card"
-msgstr ""
+msgstr "Radio-Karte"
 
 #: src/kfile-plugins/pisi/kfile_pisi.cpp:41
 msgid "Size"
-msgstr ""
+msgstr "Grösse"
 
 #: src/main.cpp:62
 msgid "TASMA - Pardus Configuration Center"
@@ -154,7 +158,7 @@ msgstr "TASMA - Pardus Konfigurationszentrum"
 #: modules/tasmatv/tasmatv.cpp:39 modules/tasmatv/tasmatv.cpp:40
 #, fuzzy
 msgid "TASMA Tv Card Configuration Module"
-msgstr "TASMA - Pardus Konfigurationszentrum"
+msgstr "TASMA TV-Karte Konfigurationsmodule"
 
 #: src/aboutview.cpp:88
 msgid ""
@@ -169,20 +173,20 @@ msgstr ""
 #: modules/tasmatv/tvconfigui.cpp:150 rc.cpp:18
 #, no-c-format
 msgid "Tuner"
-msgstr ""
+msgstr "Empfänger"
 
 #: modules/tasmatv/tvconfigui.cpp:143 rc.cpp:3
 #, no-c-format
 msgid "Tv Card"
-msgstr ""
+msgstr "TV-Karte"
 
 #: modules/tasmatv/tasmatv.cpp:81
 msgid "Tv card configuration module for TASMA."
-msgstr ""
+msgstr "TV-Karte Konfigurationsmodule für TASMA"
 
 #: modules/tasmatv/tvconfigui.cpp:136
 msgid "TvConfigUI"
-msgstr ""
+msgstr "TVConfigUI"
 
 #: src/aboutview.cpp:86
 msgid "Welcome to TASMA"
@@ -193,9 +197,16 @@ msgid ""
 "_: EMAIL OF TRANSLATORS\n"
 "Your emails"
 msgstr ""
+"_:EMAIL VON DEN ÜBERSETZERN\n"
+"oelcerman@fussballkreis.org "
+"aytekguelen@yahoo.de"
 
 #: _translatorinfo.cpp:1
 msgid ""
 "_: NAME OF TRANSLATORS\n"
 "Your names"
 msgstr ""
+"_:NAMEN VON DEN ÜBERSETZERN\n"
+"Mustafa Muhammed Ölcerman\n"
+"Aytekin Gülen"
+
