--- a/trunk/tasma/firewall-config/po/de.po
+++ b/trunk/tasma/firewall-config/po/de.po
@@ -1,155 +1,162 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of yeni.po to Deutsch
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Mustafa M. Ölcerman <oelcerman@fussballkreis.org>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: firewall-config\n"
+"Project-Id-Version: yeni\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-22 16:41+0200\n"
-"PO-Revision-Date: 2006-11-22 16:41+0200\n"
-"Last-Translator: de <EMAIL@ADDRESS>\n"
-"Language-Team: de <LL@li.org>\n"
+"PO-Revision-Date: 2006-12-05 23:12+0200\n"
+"Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
 #: src/firewall-config.py:37
 msgid "Pardus Firewall Graphical User Interface"
-msgstr ""
+msgstr "Pardus-Firewall grafische Benutzeroberfläche"
 
 #: src/firewall-config.py:53
 msgid "GUI Design & Usability"
-msgstr ""
+msgstr "GUI Design & Benutzerfreundlichkeit"
 
 #: src/firewall-config.py:54
 msgid "Help with IPTables"
-msgstr ""
+msgstr "Hilfe mit IP-Tabellen"
 
 #: src/firewall-config.py:55
 msgid "Help with KDE stuff"
-msgstr ""
+msgstr "Hile mit KDE"
 
 #: src/firewall-config.py:91
 #, python-format
 msgid "Accept all incoming connection through ports %s"
-msgstr ""
+msgstr "Alle eingehende Verbindungen durch diese Ports%s akzeptieren"
 
 #: src/firewall-config.py:93
 #, python-format
 msgid "Reject all incoming connection through ports %s"
-msgstr ""
+msgstr "Alle eingehende Verbindungen durch diese Ports%s verweigern"
 
 #: src/firewall-config.py:96
 #, python-format
 msgid "Accept all outgoing connection through ports %s"
-msgstr ""
+msgstr "Alle ausgehende Verbindungen durch diese Ports%s akzeptieren"
 
 #: src/firewall-config.py:98
 #, python-format
 msgid "Reject all outgoing connection through ports %s"
-msgstr ""
+msgstr "Alle ausgehende Verbindungen durch diese Ports%s verweigern"
 
 #: src/firewall-config.py:127
 msgid "Invalid port range."
-msgstr ""
+msgstr "Ungültiger Port-Bereich"
 
 #: src/firewall-config.py:150 src/firewall.py:229
 msgid "Firewall Configuration"
-msgstr ""
+msgstr "Firewall Einstellungen"
 
 #: src/firewall-config.py:231
 msgid "&Stop Firewall"
-msgstr ""
+msgstr "&Firewall anhalten"
 
 #: src/firewall-config.py:232
 msgid "<b><font size='+1'>Firewall is running</font></b>"
-msgstr ""
+msgstr "<b><font size='+1'>Firewall wird bereits ausgeführt</font></b>"
 
 #: src/firewall-config.py:234
 msgid ""
 "Click here to stop the firewall and allow all incoming and outgoing "
 "connections."
 msgstr ""
+"Klicken Sie hier, um die Firewall anzuhalten und alle Ein- und Ausgehenden "
+"Verbindungen zu zulassen."
 
 #: src/firewall-config.py:240
 msgid "&Start Firewall"
-msgstr ""
+msgstr "&Firewall starten"
 
 #: src/firewall-config.py:241
 msgid "<b><font size='+1'>Firewall is not running</font></b>"
-msgstr ""
+msgstr "<b><font size='+1'>Firewall ist nicht aktiv</font></b>"
 
 #: src/firewall-config.py:243
 msgid ""
 "Click here to start the firewall and allow connections only to specified "
 "services."
 msgstr ""
+"Klicken Sie hier, um die Firewall zu starten und nur erlaubten Diensten die "
+"Verbindung zu zulassen."
 
 #: src/firewall-config.py:420
 msgid "Pardus Firewall Interface is already running!"
-msgstr ""
+msgstr "Pardus-Firewall Schnittstelle wird bereits ausgeführt!"
 
 #: src/rules.py:18
 msgid "Mail services"
-msgstr ""
+msgstr "Mail Dienste"
 
 #: src/rules.py:22
 msgid "Web services"
-msgstr ""
+msgstr "Web-Dienste"
 
 #: src/rules.py:26
 msgid "Remote login service"
-msgstr ""
+msgstr "Remote-Anmeldung Dienst"
 
 #: src/rules.py:33
 msgid "Windows file sharing service"
-msgstr ""
+msgstr "Windows Dateifreigabe-Dienst"
 
 #: src/rules.py:37
 msgid "Internet relay chat service"
-msgstr ""
+msgstr "Internet Chat-Dienste weiterleiten"
 
 #: src/rules.py:41
 msgid "File transfer service"
-msgstr ""
+msgstr "Dateiübertragungs-Dienst"
 
 #: src/firewall.py:232
 msgid "Alt+H"
-msgstr ""
+msgstr "Alt+H"
 
 #: src/firewall.py:234
 msgid "Alt+A"
-msgstr ""
+msgstr "Alt+A"
 
 #: src/firewall.py:235
 msgid "&Ok"
-msgstr ""
+msgstr "&Ok"
 
 #: src/firewall.py:236
 msgid "Alt+O"
-msgstr ""
+msgstr "Alt+O"
 
 #: src/firewall.py:238
 msgid "Alt+C"
-msgstr ""
+msgstr "Alt+C"
 
 #: src/firewall.py:240
 msgid "Click here to stop the firewall and allow all incoming connections."
 msgstr ""
+"Klicken Sie hier, um die Firewall anzuhalten und alle Eingehenden "
+"Verbindungen zu zulassen."
 
 #: src/firewall.py:241
 msgid "&Stop"
-msgstr ""
+msgstr "&Stop"
 
 #: src/firewall.py:242
 msgid "Alt+S"
-msgstr ""
+msgstr "Alt+S"
 
 #: src/firewall.py:243
 msgid "<b><font size=\"+1\">Firewall is running</font></b>"
-msgstr ""
+msgstr "<b><font size=\"+1\">Firewall wir bereits ausgeführt</font></b>"
 
 #: src/firewall.py:245
 msgid ""
@@ -157,61 +164,66 @@ msgid ""
 "allow other computers to access services on this computer, check the service "
 "below:"
 msgstr ""
+"Alle eingehenden Verbindungen sind Standardmässig auf<b>verweigert</b> "
+"gesetzt. Wenn Sie anderen Computer den Zugang zu manchen Diensten auf Ihren "
+"Computer zulassen möchten, dann wählen Sie die Dienste aus:"
 
 #: src/firewall.py:246
 msgid "Incoming Connections"
-msgstr ""
+msgstr "Eingehende Verbindungen"
 
 #: src/firewall.py:247
 msgid ""
 "In this tab, you can create your own firewall rules. Use '+' button to "
 "create rules, and uncheck rules from list to remove them."
-msgstr ""
+msgstr "In dieser Registerkarte, können Sie Ihre eigenen Fierwall-Richtlinien einrichten. Benutzen Sie die '+'  Taste, um die Richlinien zu erstellen und deaktivieren Sie die Richtlinien, um diese zu entfernen."
 
 #: src/firewall.py:250
 msgid "Advanced"
-msgstr ""
+msgstr "Erweitert"
 
 #: src/dialog.py:105
 msgid "New Rule"
-msgstr ""
+msgstr "Neue Richtlinie"
 
 #: src/dialog.py:106
+#, fuzzy
 msgid "Connections"
-msgstr ""
+msgstr "Eingehende Verbindungen"
 
 #: src/dialog.py:107
 msgid "Incoming"
-msgstr ""
+msgstr "Eingehende"
 
 #: src/dialog.py:108
 msgid "Outgoing"
-msgstr ""
+msgstr "Ausgehende"
 
 #: src/dialog.py:109
 msgid "Port Range"
-msgstr ""
+msgstr "Port Bereich"
 
 #: src/dialog.py:110
 msgid "Example: 100-200,300"
-msgstr ""
+msgstr "Beispiel: 100-200,300"
 
 #: src/dialog.py:112
 msgid "TCP"
-msgstr ""
+msgstr "TCP"
 
 #: src/dialog.py:113
 msgid "UDP"
-msgstr ""
+msgstr "UDP"
 
 #: src/dialog.py:114
 msgid "Action"
-msgstr ""
+msgstr "Aktion"
 
 #: src/dialog.py:115
 msgid "Accept"
-msgstr ""
+msgstr "Akzeptieren"
 
 #: src/dialog.py:116
 msgid "Reject"
-msgstr ""
+msgstr "Verweigern"
+
