--- a/trunk/tasma/disk-manager/po/de.po
+++ b/trunk/tasma/disk-manager/po/de.po
@@ -1,81 +1,86 @@
+# translation of disk_mangr.po to Deutsch
 # translation of de.po to
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Gökmen GÖKSEL <gokmen@pardus.org.tr>, 2006.
+# Mustafa M. Ölcerman <oelcerman@fussballkreis.org>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: de\n"
+"Project-Id-Version: disk_mangr\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-05 10:50+0200\n"
-"PO-Revision-Date: 2006-11-30 22:00+0200\n"
-"Last-Translator: Gökmen GÖKSEL <gokmen@pardus.org.tr>\n"
-"Language-Team:  <tr@li.org>\n"
+"POT-Creation-Date: 2006-11-30 22:16+0200\n"
+"PO-Revision-Date: 2006-12-05 23:17+0200\n"
+"Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: src/disk-manager.py:79 src/disk-manager.py:319 src/diskform.py:132
+#: src/disk-manager.py:78
+#: src/disk-manager.py:315
+#: src/diskform.py:132
 msgid "Disk Manager"
-msgstr ""
+msgstr "Festplatten-Manager"
 
-#: src/disk-manager.py:99
-msgid "User not in disk group !! Exiting.."
-msgstr ""
-
-#: src/disk-manager.py:205 src/disk-manager.py:224
+#: src/disk-manager.py:200
+#: src/disk-manager.py:219
 msgid "Completed"
-msgstr ""
+msgstr "Fertiggestellt"
 
-#: src/disk-manager.py:205 src/disk-manager.py:224
+#: src/disk-manager.py:200
+#: src/disk-manager.py:219
 msgid "File /etc/fstab updated !"
-msgstr ""
+msgstr "Datei /etc/fstab aktualisiert !"
 
-#: src/disk-manager.py:255
+#: src/disk-manager.py:250
 msgid "Mount Point"
-msgstr ""
+msgstr "Mount-Punkt"
 
-#: src/disk-manager.py:256
+#: src/disk-manager.py:251
 msgid "File System Type"
-msgstr ""
+msgstr "Dateisystem-Format"
 
-#: src/disk-manager.py:314
+#: src/disk-manager.py:310
 msgid "Disk Manager is already running!"
-msgstr ""
+msgstr "Festplatten-Manager wird bereits ausgeführt!"
 
-#: src/diskform.py:92 src/diskform.py:139
+#: src/diskform.py:92
+#: src/diskform.py:139
 msgid "Disks"
-msgstr ""
+msgstr "Festplatten"
 
-#: src/diskform.py:93 src/diskform.py:140
+#: src/diskform.py:93
+#: src/diskform.py:140
 msgid "Partitions"
-msgstr ""
+msgstr "Partitionen"
 
 #: src/diskform.py:133
 msgid "File System Type :"
-msgstr ""
+msgstr "Dateisystem-Format:"
 
 #: src/diskform.py:134
 msgid "Mount Point :"
-msgstr ""
+msgstr "Mount-Punkt:"
 
 #: src/diskform.py:135
 msgid "Additional Options :"
-msgstr ""
+msgstr "Zusätzliche Optionen :"
 
 #: src/diskform.py:136
 msgid "Get Default Options"
-msgstr ""
+msgstr "Standard Optionen holen"
 
 #: src/diskform.py:137
 msgid "Find Disks Automatically"
-msgstr ""
+msgstr "Festplatten automatisch finden"
 
 #: src/diskform.py:138
 msgid "Show System Partitions"
-msgstr ""
+msgstr "System-Partitionen Anzeigen"
 
 #: src/diskform.py:141
 msgid "To update disk changes the manager must run as root"
-msgstr ""
+msgstr "Um die Laufwerk-Änderungen zu aktualisieren, muss dieser Manager als root ausgeführt werden"
+
