--- a/tasma/network-manager/po/de.po
+++ b/tasma/network-manager/po/de.po
@@ -1,163 +1,104 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of de.po to Deutsch
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+# Mustafa M. Ölcerman <oelcerman@fussballkreis.org>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: network manager\n"
+"Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-12-05 23:48+0200\n"
-"PO-Revision-Date: 2006-11-06 01:36+0100\n"
-"Last-Translator: Mustafa <test>\n"
-"Language-Team: german <de@li.org>\n"
+"POT-Creation-Date: 2006-12-01 13:23+0200\n"
+"PO-Revision-Date: 2006-12-05 23:29+0200\n"
+"Last-Translator: Mustafa M. Ölcerman <oelcerman@fussballkreis.org>\n"
+"Language-Team: Deutsch <http://liste.uludag.org.tr/mailman/listinfo/pardus-translation-de>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
 
-#: browser.py:49
+#: connection.py:33 browser.py:41
 msgid "Name:"
 msgstr "Name:"
 
-#: browser.py:56 connection.py:76
-msgid "Authentication"
-msgstr "Authentifikation"
-
-#: browser.py:59 connection.py:214
-msgid "Address:"
-msgstr "Adresse:"
-
-#: browser.py:62 connection.py:250
-msgid "Automatic"
-msgstr ""
-
-#: browser.py:90
-#, fuzzy
-msgid "Turn on/off connection"
-msgstr "Neue Verbindung"
-
-#: browser.py:103
-#, fuzzy
-msgid "Configure connection"
-msgstr "Netzwerkverbindungen konfigurieren"
-
-#: browser.py:106
-#, fuzzy
-msgid "Delete connection"
-msgstr "Verbindung löschen?"
-
-#: browser.py:124
-#, python-format
-msgid ""
-"Should I delete the\n"
-"'%s'\n"
-"connection?"
-msgstr ""
-"Soll ich die \n"
-"'%s'\n"
-"Verbindung löschen?"
-
-#: browser.py:125
-msgid "Delete connection?"
-msgstr "Verbindung löschen?"
-
-#: browser.py:379
-#, fuzzy
-msgid "New connection"
-msgstr "Neue Verbindung"
-
-#: browser.py:384 nameconf.py:27
-#, fuzzy
-msgid "Name Service Settings"
-msgstr "Netzwerk Einstellungen"
-
-#: browser.py:418
-#, fuzzy
-msgid "Network Connections Help"
-msgstr "Netzwerkverbindungen"
-
-#: connection.py:34
-#, fuzzy
-msgid "Connection name:"
-msgstr "Verbindungsarten"
-
 #: connection.py:41
-#, fuzzy
-msgid "Connection"
-msgstr "Verbinden"
-
-#: connection.py:47
 msgid "Device:"
 msgstr "Gerät:"
 
-#: connection.py:52
-#, fuzzy
-msgid "Select"
-msgstr "Kein Gerät"
-
-#: connection.py:66
+#: connection.py:61
 msgid "Scan"
 msgstr "Scannen"
 
-#: connection.py:82
-msgid "Mode:"
-msgstr ""
+#: connection.py:72
+msgid "Authentication"
+msgstr "Authentifikation"
 
-#: connection.py:90
+#: connection.py:76
+msgid "Mode:"
+msgstr "Art:"
+
+#: connection.py:87
 msgid "No authentication"
 msgstr "Keine Authentifikation"
 
-#: connection.py:108 connection.py:119
+#: connection.py:102 connection.py:113
 msgid "Password:"
 msgstr "Passwort:"
 
-#: connection.py:116
+#: connection.py:110
 #, fuzzy
 msgid "User name:"
 msgstr "Hostname:"
 
-#: connection.py:146
+#: connection.py:140
 msgid "Scan results:"
-msgstr ""
+msgstr "Suchergebnisse:"
 
-#: connection.py:154
+#: connection.py:148
 msgid "Scan again"
-msgstr ""
+msgstr "Erneut suchen"
 
-#: connection.py:156
+#: connection.py:150
 msgid "Use"
-msgstr ""
+msgstr "Verwenden"
 
-#: connection.py:195
+#: connection.py:189
 #, fuzzy
 msgid "Network settings"
 msgstr "Netzwerk Einstellungen"
 
-#: connection.py:205
+#: connection.py:195
 msgid "Automatic query (DHCP)"
 msgstr "Automatisch beziehen (DHCP)"
 
-#: connection.py:210
+#: connection.py:200
 msgid "Manual"
 msgstr "Manuell"
 
-#: connection.py:220 connection.py:237 connection.py:252
-msgid "Custom"
-msgstr ""
+#: connection.py:209 browser.py:46
+msgid "Address:"
+msgstr "Adresse:"
 
-#: connection.py:225
+#: connection.py:215 connection.py:230 connection.py:246
+msgid "Custom"
+msgstr "Individual"
+
+#: connection.py:219
 msgid "Net mask:"
 msgstr "Netzmaske:"
 
-#: connection.py:232
+#: connection.py:225
 msgid "Gateway:"
 msgstr "Gateway:"
 
-#: connection.py:241 nameconf.py:42
+#: connection.py:234 nameconf.py:42
 msgid "Name servers"
 msgstr "Name-Server"
 
-#: connection.py:442
+#: connection.py:244
+msgid "From query"
+msgstr "Von Anfrage"
+
+#: connection.py:437
 msgid "Configure network connection"
 msgstr "Netzwerkverbindungen konfigurieren"
 
@@ -171,23 +112,14 @@ msgstr "Netzwerk Einstellungen"
 msgid "Network manager module is already started!"
 msgstr "Netzwerk KGA wird bereits ausgeführt!"
 
-#: comariface.py:162
-msgid "Waiting COMAR..."
-msgstr ""
-
-#: comariface.py:163
-msgid "Connection to the COMAR unexpectedly closed, trying to reconnect..."
-msgstr ""
-
-#: comariface.py:182 comariface.py:199
-msgid ""
-"Cannot connect to the COMAR! If it is not running you should start it with "
-"the 'service comar start' command in a root console."
-msgstr ""
-
-#: comariface.py:365
+#: comariface.py:319
 msgid "new connection"
 msgstr "Neue Verbindung"
+
+#: nameconf.py:27 browser.py:364
+#, fuzzy
+msgid "Name Service Settings"
+msgstr "Netzwerk Einstellungen"
 
 #: nameconf.py:35
 msgid "Computer"
@@ -205,6 +137,50 @@ msgstr "Name-Server hinzufügen"
 msgid "Name server:"
 msgstr "Name-Server:"
 
+#: browser.py:49 browser.py:137
+msgid "Automatic"
+msgstr "Automatisch"
+
+#: browser.py:79
+#, fuzzy
+msgid "Turn on/off connection"
+msgstr "Neue Verbindung"
+
+#: browser.py:92
+#, fuzzy
+msgid "Configure connection"
+msgstr "Netzwerkverbindungen konfigurieren"
+
+#: browser.py:95
+#, fuzzy
+msgid "Delete connection"
+msgstr "Verbindung löschen?"
+
+#: browser.py:113
+#, python-format
+msgid ""
+"Should I delete the\n"
+"'%s'\n"
+"connection?"
+msgstr ""
+"Soll ich die \n"
+"'%s'\n"
+"Verbindung löschen?"
+
+#: browser.py:114
+msgid "Delete connection?"
+msgstr "Verbindung löschen?"
+
+#: browser.py:360
+#, fuzzy
+msgid "New connection"
+msgstr "Neue Verbindung"
+
+#: browser.py:396
+#, fuzzy
+msgid "Network Connections Help"
+msgstr "Netzwerkverbindungen"
+
 #: newconn.py:26
 #, fuzzy
 msgid "Create a new connection"
@@ -221,59 +197,13 @@ msgstr "Erstellen"
 
 #: newconn.py:103
 msgid "No suitable device found"
-msgstr ""
+msgstr "Kein geeignetes Gerät gefunden"
 
-#: newconn.py:109
+#: newconn.py:111
 msgid "Install network packages!"
 msgstr "Netzwerk-Pakete installieren!"
 
-#: newconn.py:110
+#: newconn.py:112
 msgid "No package with COMAR network scripts are installed yet."
-msgstr ""
-"Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
+msgstr "Es ist noch kein Paket installiert um das Netzwerk über COMAR zu bilden."
 
-#, fuzzy
-#~ msgid "Passphrase"
-#~ msgstr "Kennwort:"
-
-#~ msgid "Login"
-#~ msgstr "Anmeldung"
-
-#~ msgid "Key"
-#~ msgstr "Schlüssel"
-
-#~ msgid "Network:"
-#~ msgstr "Netzwerk:"
-
-#~ msgid "Basic"
-#~ msgstr "Basis"
-
-#~ msgid "Accept"
-#~ msgstr "Akzeptieren"
-
-#~ msgid "Phone number"
-#~ msgstr "Telefonnummer"
-
-#~ msgid "Active"
-#~ msgstr "Aktiv"
-
-#~ msgid "Inactive"
-#~ msgstr "Inaktiv"
-
-#~ msgid "Network connections:"
-#~ msgstr "Netzwerkverbindungen:"
-
-#~ msgid "Settings"
-#~ msgstr "Einstellungen"
-
-#~ msgid "Disconnect"
-#~ msgstr "Trennen"
-
-#~ msgid "Unconfigured"
-#~ msgstr "Nicht konfiguriert"
-
-#~ msgid "Network connections"
-#~ msgstr "Netzwerkverbindungen"
-
-#~ msgid "Select a connection type:"
-#~ msgstr "Eine Verbindungsart auswählen:"
